<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:background="@drawable/bg_detail" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/idHs"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_minimum" />

                <EditText
                    android:id="@+id/edtIdStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_minimum"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_minimum" />

                <EditText
                    android:id="@+id/edtNameStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_minimum"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="Lớp:"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/edtClassStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerClassStudent"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="6"
                    android:popupBackground="#47abab"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/sex"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioBtnMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:text="Nam"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radioBtnFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:clickable="false"
                            android:text="Nữ"
                            android:textStyle="bold" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/birthday"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/edtBirthdayStudent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:enabled="false"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/imgBtnDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/common_image_date" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/address"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_minimum" />

                <EditText
                    android:id="@+id/edtAddressStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_minimum"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/phone"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_minimum" />

                <EditText
                    android:id="@+id/edtPhoneStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size_minimum"
                    android:textStyle="bold"
                    android:inputType="phone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/nation"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/edtNationStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerNationStudent"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="6"
                    android:popupBackground="#47abab"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/religion"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/edtReligionStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerReligionStudent"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="6"
                    android:popupBackground="#47abab"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/father_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/edtFatherName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/father_job"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/edtFatherJob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/mother_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/edtMotherName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/mother_job"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/edtMotherJob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button_edit_save"
                    android:text="edit" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/bg_button_edit_save"
                    android:enabled="false"
                    android:text="save" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
