<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:background="@drawable/bg_detail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/idGv"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_minimum" />

            <EditText
                android:id="@+id/edtIdTeacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/edtNameTeacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:digits="qwertzuiopasdfghjklyxcvbnm"
                android:enabled="false"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/sex"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBtnMaleTeacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="Nam"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioBtnFemaleTeacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:clickable="false"
                        android:text="Nữ"
                        android:textStyle="bold" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/birthday"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/edtBirthdayTeacher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/address"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />
            <LinearLayout
                android:id="@+id/llContaint"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/spinnerProvence"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:popupBackground="#47abab"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/spinnerDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:popupBackground="#47abab"
                    android:visibility="gone" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtAddressTeacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:enabled="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/phone"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/edtPhoneTeacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:enabled="false"
                android:maxLength="11"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Loại môn học"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/edtSubjectTeacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:enabled="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerSubjectTeacher"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="6"
                android:popupBackground="#47abab"
                android:visibility="gone" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/btnEditTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_edit_save"
                android:text="edit" />

            <Button
                android:id="@+id/btnSaveTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_button_edit_save"
                android:enabled="false"
                android:text="save" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
